test/sema/typeck/module/struct-in-type-not-accessible.out
error: element is not accessible.
--> struct-in-type-not-accessible.dora:1:14
 | fn f(_value: foo::Foo) {}
                ~~~~~~~~
 | mod foo {
 |     struct Foo(Int32)
1 error found.
