test/sema/typeck/module/struct-in-type-not-accessible.dora
fn f(_value: foo::Foo) {}
mod foo {
    struct Foo(Int32)
}
